<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_section"
            android:icon="@drawable/ic_home"
            android:title="@string/home_section"/>
        <item
            android:id="@+id/family_section"
            android:icon="@drawable/ic_family_icon_black"
            android:title="@string/family_section"/>
        <item
            android:id="@+id/tasks_section"
            android:icon="@drawable/ic_photos"
            android:title="@string/tasks_section"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/other_options">
        <menu>
            <item
                android:id="@+id/settings_option"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings_option"/>
            <item
                android:id="@+id/about_option"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about_option"/>
        </menu>
    </item>
</menu>