<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/family_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/family_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:id="@+id/txt_family_image"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/family_image"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/familyImage"
                android:maxHeight="@dimen/nav_header_height"
                android:adjustViewBounds= "true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_family_icon_blue"
                android:nestedScrollingEnabled="false"
                android:onClick="select_image" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_family_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_family_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/family_input_password"
                    android:imeOptions="actionGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_optional_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/membersLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btnAddMember"
                    android:layout_toStartOf="@+id/btnAddMember">

                    <AutoCompleteTextView
                        android:id="@+id/memberEmail"
                        android:imeOptions="actionGo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/memberEmail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1">

                    </AutoCompleteTextView>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAddMember"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:background="@android:drawable/ic_input_add"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:elevation="0dp"
                    android:backgroundTint="@color/colorAccent" />

            </RelativeLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/membersList" />

            <Button
                android:id="@+id/btn_create_family"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_family"
                android:textStyle="bold"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/family_progress_bar"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>